--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Sudoku</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="easy">Facile</string>
+    <string name="medium">Moyen</string>
+    <string name="hard">Difficile</string>
+    <string name="username">Nom d\'utilisateur</string>
+    <string name="save">sauvegarder</string>
+    <string name="congrats">Bravo</string>
+    <string name="congrats2">! Vous avez gagné en </string>
+    <string name="joke">"Quand tu as le nord en face,\ntu as forcément le sudoku"</string>
 </resources>
