updated string value for 'congrats'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hard">Difficile</string>
     <string name="username">Nom d\'utilisateur</string>
     <string name="save">sauvegarder</string>
-    <string name="congrats">Bravo %1$s ! Vous avez gagné en </string>
+    <string name="congrats">Bravo</string>
     <string name="congrats2">! Vous avez gagné en </string>
     <string name="joke">"Quand tu as le nord en face,\ntu as forcément le sudoku"</string>
     <string name="notFinished">Grille incorrecte...</string>
